--- a/application/templates/sql_gen.html
+++ b/application/templates/sql_gen.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-<h1> 1. 查询某个操作码一段日期内的触发次数 </h1>
+<p> 1. 查询某个操作码一段日期内的触发次数 </p>
 <form action="" method="post" novalidate>
     <p> 开始日期 <input type="date" name="begin_date" class="form-control date-picker"/>
         结束日期 <input type="date" name="end_date" class="form-control date-picker"/>
@@ -23,7 +23,7 @@
 
 
 
-<h1> 2. 查询某个操作码一段日期内的触发人数 </h1>
+<p> 2. 查询某个操作码一段日期内的触发人数 </p>
 <form action="" method="post" novalidate>
     <p> 开始日期 <input type="date" name="begin_date" class="form-control date-picker"/>
         结束日期 <input type="date" name="end_date" class="form-control date-picker"/>
